// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development 1`] = `
{
  "devServer": {
    "compress": true,
    "devMiddleware": {
      "publicPath": "https://localhost:8080/dist/",
      "writeToDisk": [Function],
    },
    "headers": {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "<VERSION>.0",
    "port": 8080,
    "server": "https",
  },
  "devtool": "cheap-module-source-map",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.jsx\\?\\$/,
      },
      {
        "test": /\\\\\\.css\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 2,
              "sourceMap": true,
              "url": {
                "filter": [Function],
              },
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "implementation": {
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": {
                  "silent": {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "info": "dart-sass	<VERSION>	(Sass Compiler)	[Dart]
dart2js	<VERSION>	(Dart Compiler)	[Dart]",
                "load": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": {
                "fiber": false,
              },
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
        "type": "asset",
      },
    ],
  },
  "optimization": {
    "minimizer": [
      CssMinimizerPlugin {
        "options": {
          "exclude": undefined,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "output": {
                "comments": false,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": {
      "chunks": "all",
    },
  },
  "output": {
    "assetModuleFilename": "assets/[hash][ext][query]",
    "filename": "[name].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "[name].css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "manifest": {},
      "options": {
        "customFormatTags": false,
        "filename": "[name]-[type].html",
        "generateChunksFiles": false,
        "generateChunksManifest": true,
        "outputPath": null,
        "templateScript": "<script src="{{chunk}}"></script>",
        "templateStyle": "<link rel="stylesheet" href="{{chunk}}" />",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": [],
      "cleanOnceBeforeBuildPatterns": [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "stage": 100,
        "verbose": true,
      },
      "outputPath": "",
      "trash": [],
      "verbose": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": [],
  },
  "stats": "errors-warnings",
}
`;

exports[`production 1`] = `
{
  "devServer": {
    "compress": true,
    "devMiddleware": {
      "publicPath": "https://localhost:8080/dist/",
      "writeToDisk": [Function],
    },
    "headers": {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "<VERSION>.0",
    "port": 8080,
    "server": "https",
  },
  "devtool": false,
  "module": {
    "rules": [
      {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.jsx\\?\\$/,
      },
      {
        "test": /\\\\\\.css\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 2,
              "sourceMap": true,
              "url": {
                "filter": [Function],
              },
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "implementation": {
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": {
                  "silent": {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "info": "dart-sass	<VERSION>	(Sass Compiler)	[Dart]
dart2js	<VERSION>	(Dart Compiler)	[Dart]",
                "load": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": {
                "fiber": false,
              },
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
        "type": "asset",
      },
    ],
  },
  "optimization": {
    "minimizer": [
      CssMinimizerPlugin {
        "options": {
          "exclude": undefined,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "output": {
                "comments": false,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": {
      "chunks": "all",
    },
  },
  "output": {
    "assetModuleFilename": "assets/[hash][ext][query]",
    "filename": "[name].[contenthash].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[name].[contenthash].css",
        "experimentalUseImportModule": undefined,
        "filename": "[name].[contenthash].css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "manifest": {},
      "options": {
        "customFormatTags": false,
        "filename": "[name]-[type].html",
        "generateChunksFiles": false,
        "generateChunksManifest": true,
        "outputPath": null,
        "templateScript": "<script src="{{chunk}}"></script>",
        "templateStyle": "<link rel="stylesheet" href="{{chunk}}" />",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": [],
      "cleanOnceBeforeBuildPatterns": [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "stage": 100,
        "verbose": true,
      },
      "outputPath": "",
      "trash": [],
      "verbose": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": [],
  },
  "stats": "errors-warnings",
}
`;
